...
                                    <barButtonItem title="incomeTemplates" image="folder.badge.plus" catalog="system" style="plain" id="MHP-u2-p94">
                                        <connections>
                                            <action selector="toolbarIncomeTemplatesButtonPressed:" destination="ldu-oQ-Xxf" id="rqJ-xK-13P"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ctg-yN-9bK"/>
                                    <barButtonItem title="expenseTemplates" image="folder.badge.minus" catalog="system" style="plain" id="8iy-rC-9zu" userLabel="expenseTemplates">
                                        <connections>
                                            <action selector="toolbarExpenseTemplatesButtonPressed:" destination="ldu-oQ-Xxf" id="ha9-cA-EkE"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="2zf-jU-6kR"/>
                                    <barButtonItem title="Menu" image="line.horizontal.3" catalog="system" style="plain" id="YPi-FL-MVe" userLabel="Menu"/>
                                </items>
                            </toolbar>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="KFZ-yK-khd"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
...
